Added json-server for api testing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,8 +11,10 @@
         <ul>
             <li><a href="page1.html">Page 1</a></li>
         </ul>
-        <h2>JSON demo</h2>
-        <p id="json"></p>
+        <h2>JSON demo (from api)</h2>
+        <p id="jsonApi">Loading...</p>
+        <h2>JSON demo (from file)</h2>
+        <p id="jsonFile">Loading...</p>
     </div>
 </div>
 </body>
